# homeassistant-captive-portal

./: .dockerignore  .gitignore  .grype.yaml  .mypy.ini  .pre-commit-config.yaml  Makefile  PHASE7_REMAINING_TASKS.md  README.md  RELEASE_NOTES.md  REUSE.toml  phase5_code_review.md  pyproject.toml  repository.yaml  tbump.toml
.aislop/: baseline.json  config.yml
.github/: actionlint.yaml  dependabot.yml  release-drafter.yml
.github/agents/: copilot-instructions.md
.github/prompts/: speckit.specify.prompt.md
.github/workflows/: autolabeler.yaml  build-test.yaml  ci.yaml  codeql.yaml  openssf-scorecard.yaml  release-drafter.yaml  release.yaml  semantic-pull-request.yaml  tag-push.yaml
.specify/: init-options.json
.specify/memory/: constitution.md
addon/: .gitignore  Dockerfile  README.md  build.yaml  config.json  config.yaml  pyproject.toml
addon/rootfs/etc/s6-overlay/s6-rc.d/captive-portal/: finish  run
addon/rootfs/etc/s6-overlay/s6-rc.d/captive-portal-guest/: finish  run
addon/src/captive_portal/: _version.pyi  app.py  guest_app.py  guest_debug.py  guest_errors.py  guest_routes.py  middleware.py
addon/src/captive_portal/api/: __init__.py
addon/src/captive_portal/api/routes/: admin_accounts.py  admin_auth.py  admin_login_ui.py  admin_logout_ui.py  admin_redirects.py  booking_authorize.py  captive_detect.py  dashboard_ui.py  docs.py  grants.py  grants_ui.py  guest_portal.py  health.py  integrations.py  integrations_helpers.py  integrations_ui.py  omada_settings_helpers.py  omada_settings_ui.py  portal_config.py  portal_settings_ui.py  vouchers.py  vouchers_bulk_ui.py  vouchers_common.py  vouchers_purge_ui.py  vouchers_ui.py
addon/src/captive_portal/api/routes/guest_authorization/: __init__.py  bookings.py  context.py  controller.py  errors.py  form.py  mac_address.py  orchestration.py  redirects.py  vouchers.py
addon/src/captive_portal/config/: omada_config.py  settings.py  settings_migration.py  settings_validators.py
addon/src/captive_portal/controllers/tp_omada/: adapter.py  adapter_factory.py  adapter_protocol.py  base_client.py  dependencies.py  legacy_adapter.py  legacy_client.py  openapi_adapter.py  openapi_client.py
addon/src/captive_portal/integrations/: __init__.py  ha_client.py  ha_discovery_service.py  ha_errors.py  rental_control_service.py
addon/src/captive_portal/models/: access_grant.py  admin_session.py  admin_user.py  audit_config.py  ha_integration_config.py  omada_config.py  portal_config.py  voucher.py
addon/src/captive_portal/persistence/: access_grant_repository.py  admin_repositories.py  database.py  rental_control_event_repository.py  repositories.py  repository_base.py  voucher_repository.py
addon/src/captive_portal/security/: __init__.py  credential_encryption.py  csrf.py  hmac_csrf.py  password_hashing.py  rate_limiter.py  session_middleware.py
addon/src/captive_portal/services/: audit_cleanup_service.py  audit_service.py  booking_code_validator.py  cache_service.py  cleanup_service.py  config_migration.py  dashboard_service.py  grant_expiry_service.py  grant_service.py  redirect_validator.py  retry_queue_service.py  unified_code_service.py  vlan_validation_service.py  voucher_purge_service.py  voucher_service.py
addon/src/captive_portal/utils/: network_utils.py
addon/src/captive_portal/web/middleware/: rate_limit_middleware.py  security_headers.py
addon/src/captive_portal/web/templates/admin/: dashboard.html  grants_enhanced.html  integrations.html  login.html  omada_settings.html  portal_settings.html  vouchers.html
addon/src/captive_portal/web/templates/guest/: authorize.html  booking_authorize.html  error.html  welcome.html
addon/src/captive_portal/web/templates/portal/: index.html
addon/src/captive_portal/web/themes/default/: admin-grants.js  admin-integrations.js  admin-login.js  admin-omada-settings.js  admin-portal-settings.js  admin-vouchers.js  admin.css
docs/: FUTURE_ENHANCEMENTS.md  admin_ui_walkthrough.md  architecture_overview.md  audit_logging_review.md  cache_decision.md  guest_authorization.md  ha_integration_guide.md  performance_validation_guide.md  permissions_matrix.md  quickstart.md  release_notes_mvp.md  security_review_checklist.md  tp_omada_setup.md  troubleshooting.md
docs/addon/: config.md  configuration.md
specs/001-captive-portal-access/: TP-Omada-FAQ.md  cache_decision.md  constitution_gate_checklist.md  contract_tests_plan.md  performance_baselines.md  permissions_matrix.md  phase1.md  phase1_review.md  phase2_review.md  phase3_decisions.md  phase3_review.md  phase4_decisions.md  phase5_decisions.md  phase6_blockers.md  phase6_decisions.md  phase6_review.md  plan.md  research.md  spec.md  tasks.md
specs/002-addon-app-wiring/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-addon-structure-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-dual-port-networking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-admin-ui-pages/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-integrations-auto-detect/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-voucher-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-omada-controller-wiring/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-vlan-auth-isolation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-multi-device-vouchers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-voucher-purge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-yaml-to-webui-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-omada-openapi-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-guest-portal-decomposition/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
tests/: __init__.py  conftest.py  route_helpers.py
(+337 files in other folders)
