# SPDX-FileCopyrightText: 2025 Andrew Grimberg
# SPDX-License-Identifier: Apache-2.0
[project]
name = "captive-portal"
version = "0.0.0.dev0"
description = "Captive portal guest access (TP-Omada + Home Assistant)"
authors = [{name="Andrew Grimberg", email="tykeal@bardicgrove.org"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "sqlmodel",
  "pydantic",
  "jinja2",
  "passlib[bcrypt]",
  "argon2-cffi>=25.1.0",
  "email-validator>=2.3.0",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = ["pytest","pytest-cov","anyio","ruff","mypy","types-PyYAML"]

[tool.ruff]
line-length = 100

[tool.interrogate]
fail-under = 100

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = "httpx"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.integration.test_add_additional_admin",
    "tests.integration.test_admin_auth_login_logout",
    "tests.integration.test_admin_extend_revoke_grant",
    "tests.integration.test_admin_list_filters",
    "tests.integration.test_admin_session_csrf",
    "tests.integration.test_admin_session_timeout",
    "tests.integration.test_initial_admin_bootstrap",
]
disallow_untyped_calls = false
disallow_untyped_defs = false

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
]

[tool.setuptools]
packages = ["captive_portal"]
package-dir = {"captive_portal" = "src/captive_portal"}

[tool.pytest.ini_options]
markers = [
    "contract: marks tests as contract/API tests requiring external dependencies",
    "integration: marks tests as integration tests requiring full system setup",
    "performance: marks tests as performance tests (deselect with '-m \"not performance\"')",
]
