# SPDX-FileCopyrightText: 2025 Andrew Grimberg
# SPDX-License-Identifier: Apache-2.0
[project]
name = "captive-portal"
version = "0.0.0.dev0"
description = "Captive portal guest access (TP-Omada + Home Assistant)"
authors = [{name="Andrew Grimberg", email="tykeal@bardicgrove.org"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "sqlmodel",
  "pydantic",
  "jinja2",
  "passlib[bcrypt]",
  "argon2-cffi>=25.1.0",
  "email-validator>=2.3.0",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=6.0.0",
  "mypy>=1.15.0",
  "ruff>=0.9.0",
  "pre-commit>=4.1.0",
  "interrogate>=1.7.0",
  "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/captive_portal"]
include = [
  "src/captive_portal/web/templates/**",
  "src/captive_portal/web/themes/**",
]
